Update ix from 2.3.4 to 2.3.5

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -28,7 +28,6 @@
         "./index.ts",
         "./tests/index.test.ts",
         "./tests/publication.test.ts",
-        "./tests/helpers/twitter-date.test.ts",
-        "./typings/augmentations/ix.d.ts"
+        "./tests/helpers/twitter-date.test.ts"
     ]
 }
