--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,14 @@
 # https://docs.docker.com/engine/reference/builder/#dockerignore-file
+# Inspect image contents with `docker run -it twitter-paper_web sh`
 
 # Start .gitignore copy
+/.env
+/chrome/
+/target-tsc/
+
 node_modules/
-src/server/node_modules/
-target-tsc/
-npm-debug.log
-chrome/
-.env
 # End .gitignore copy
 
-.vscode/
-.git/
-.gitignore
+/.vscode/
+/.git/
+/.gitignore
