--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,38 +3,38 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@types/blue-tape": "^0.1.31",
-    "@types/body-parser": "^1.16.3",
-    "@types/connect-redis": "^0.0.6",
+    "@types/blue-tape": "^0.1.32",
+    "@types/body-parser": "^1.17.0",
+    "@types/connect-redis": "^0.0.7",
     "@types/denodeify": "^1.2.30",
-    "@types/express": "^4.0.35",
-    "@types/express-session": "^1.15.1",
-    "@types/lodash": "^4.14.69",
-    "@types/luxon": "^0.2.5",
-    "@types/node": "^8.0.13",
-    "@types/node-fetch": "^1.6.7",
-    "@types/ramda": "^0.24.4",
-    "@types/redis": "^2.6.0",
-    "@types/request-ip": "^0.0.31",
-    "body-parser": "^1.17.1",
+    "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.10",
+    "@types/luxon": "^1.2.2",
+    "@types/node": "^10.5.8",
+    "@types/node-fetch": "^2.1.2",
+    "@types/ramda": "^0.25.36",
+    "@types/redis": "^2.8.6",
+    "@types/request-ip": "^0.0.33",
+    "body-parser": "^1.18.3",
     "connect-redis": "^3.3.0",
     "decode-ts": "^0.0.13",
     "denodeify": "^1.2.1",
-    "express": "^4.15.2",
+    "express": "^4.16.3",
     "express-fp": "^0.0.13",
+    "express-result-types": "^0.0.4",
     "express-session": "^1.15.2",
     "fp-ts": "^1.7.1",
     "http-status-codes": "^1.3.0",
     "io-ts": "^1.3.0",
     "io-ts-reporters": "^0.0.21",
     "ix": "^2.3.5",
-    "luxon": "^0.5.0",
-    "node-fetch": "^1.5.0",
-    "ramda": "^0.24.1",
+    "luxon": "^1.3.3",
+    "node-fetch": "^2.2.0",
+    "ramda": "^0.25.0",
     "redis": "^2.7.1",
-    "source-map-support": "^0.4.15",
+    "source-map-support": "^0.5.8",
     "twitter-api-ts": "^0.0.33",
-    "unionize": "^1.0.0"
+    "unionize": "^2.1.2"
   },
   "devDependencies": {
     "blue-tape": "^1.0.0"
