Add ICU data for Node

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tsc": "npm run tsc:server",
     "ts-unused-exports:server": "ts-unused-exports './src/server/tsconfig.json'",
     "compile": "npm run tsc",
-    "node:with-source-maps": "node --require source-map-support/register",
+    "node": "node --icu-data-dir=./node_modules/full-icu",
+    "node:with-source-maps": "npm run node -- --require source-map-support/register",
     "server": "npm run node:with-source-maps -- ./target-tsc/server/index.js",
     "server:dev": "npm run node:with-source-maps -- --inspect=0.0.0.0:9229 ./target-tsc/server/index.js",
     "start:dev": "nodemon --exec 'concurrently --kill-others-on-fail \"npm run compile\" \"npm run lint\" && npm run server:dev' --watch ./src/server/ --ext ts",
