--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "tsc:server": "tsc --build ./src/server/",
     "tsc:server:watch": "npm run tsc:server -- --watch",
-    "typecheck:server:watch": "npm run tsc:server:watch -- --noEmit",
+    "typecheck:server:watch": "tsc --project ./src/server/ --watch --noEmit",
     "pretsc": "rm -rf ./target-tsc/ && mkdir -p ./target-tsc/",
     "tsc": "npm run tsc:server",
     "ts-unused-exports:server": "ts-unused-exports './src/server/tsconfig.json'",
