--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "server": "npm run node:with-source-maps -- ./target-tsc/server/index.js",
     "server:dev": "npm run node:with-source-maps -- --inspect=0.0.0.0:9229 ./target-tsc/server/index.js",
     "start:dev": "nodemon --exec 'concurrently --kill-others-on-fail \"npm run compile\" \"npm run lint\" && npm run server:dev' --watch ./src/server/ --ext ts",
-    "start": "concurrently --kill-others-on-fail 'npm run compile' 'npm run lint' && npm run server",
+    "start": "npm run server",
     "test:server": "npm run tsc:server && npm run lint:server && npm run node:with-source-maps -- ./target-tsc/server/tests/index.test.js",
     "test": "npm run test:server",
     "tslint:server": "tslint --project './src/server/'",
     "lint:server": "npm run tslint:server && npm run ts-unused-exports:server",
     "lint": "npm run lint:server",
-    "format": "prettier --write './**/*.{ts,js,json,md,yml}' '.prettierrc'"
+    "format": "prettier --write './**/*.{ts,js,json,md,yml}' '.prettierrc'",
+    "compile-and-lint": "concurrently --kill-others-on-fail 'npm run compile' 'npm run lint'",
+    "postinstall": "npm run compile-and-lint"
   },
   "dependencies": {
     "concurrently": "^3.6.1",
